syntax = "proto3";

import "root/model.proto";

package game_models;


message ShipGridView {
    enum HitState {
        UNKNOWN = 0;
        UNTOUCHED = 1;
        MISS = 2;
        HIT = 3;
        IMPOSSIBLE = 4;
    }
    
    
    message Row {
        repeated HitState cells = 1;
    }
    repeated Row hit_grid = 1;
    repeated ActiveShip ships = 2;
}



message ActiveShip {
    uint32 length = 1;
    root_models.Orientation orientation = 2;
    uint32 head_row = 3; 
    uint32 head_col = 4;
    repeated bool hits = 5;
}


